--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -8,6 +8,12 @@
 
     <title>Marim | {{ page.title }}</title>
 
+    <style>
+        .orange {
+            color: orange
+        }
+    </style>    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
@@ -25,16 +31,27 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Tutorial</a>
+                            <a class="nav-link {% if page.title == 'Tutorial' %}active disabled{% endif %}" aria-current="page" href="/tutorial.html">Tutorial</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Manual</a>
+                            <a class="nav-link  {% if page.title == 'Manual' %}active disabled{% endif %}" href="/manual.html">Manual</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </div>
+
+    <section>
+        <div class="container">
+            <div class="row text-center">
+                <div class="d-flex flex-column mt-5">
+                    <h1 class="orange">Marim Data Services Platform</h1>
+                    <h3 class="mt-3">{{ page.subtitle }}</h3>
+                </div>
+            </div>
+        </div>    
+    </section>
 
     <section>
         {{ content }}
