--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -8,14 +8,20 @@
 
     <title>Marim | {{ page.title }}</title>
 
-    <style>
-        .orange {
-            color: orange
-        }
-    </style>    
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
+    <link href="css/paraiso-dark.css" rel="stylesheet">
+
+    <style>
+        .orange {
+            color: orange;
+        }
+
+        pre {
+            padding: 0.5em;
+        }
+    </style>
 </head>
 
 <body>
@@ -31,10 +37,12 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link {% if page.title == 'Tutorial' %}active disabled{% endif %}" aria-current="page" href="/tutorial.html">Tutorial</a>
+                            <a class="nav-link {% if page.title == 'Tutorial' %}active disabled{% endif %}"
+                                aria-current="page" href="/tutorial.html">Tutorial</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link  {% if page.title == 'Manual' %}active disabled{% endif %}" href="/manual.html">Manual</a>
+                            <a class="nav-link  {% if page.title == 'Manual' %}active disabled{% endif %}"
+                                href="/manual.html">Manual</a>
                         </li>
                     </ul>
                 </div>
@@ -44,17 +52,31 @@
 
     <section>
         <div class="container">
-            <div class="row text-center">
-                <div class="d-flex flex-column mt-5">
+            <div class="row m-5">
+                <div class="d-flex flex-column text-center">
                     <h1 class="orange">Marim Data Services Platform</h1>
                     <h3 class="mt-3">{{ page.subtitle }}</h3>
                 </div>
             </div>
-        </div>    
+        </div>
     </section>
 
     <section>
-        {{ content }}
+        <div class="container">
+            {{ content }}
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="row m-5">
+                <div class="col text-center">
+                    <a href="https://www.gnu.org/licenses/agpl-3.0.html">
+                        <img src="img/agplv3-with-text-162x68.png" title="GNU Affero General Public License">
+                    </a>
+                </div>
+            </div>
+        </div>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
