--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -77,11 +77,143 @@
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.7.0/build/styles/default.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.7.0/build/styles/github-dark.min.css">
     <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.7.0/build/highlight.min.js"></script>
-    <!-- and it's easy to individually load additional languages -->
     <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.7.0/build/languages/bash.min.js"></script>       
-    <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.7.0/build/languages/java.min.js"></script>       
+
+    <script>
+/*! `java` grammar compiled for Highlight.js 11.7.0 */
+(() => {
+    var e = (() => {
+        "use strict";
+        var e = "\\.([0-9](_*[0-9])*)",
+            a = "[0-9a-fA-F](_*[0-9a-fA-F])*",
+            n = {
+                className: "number",
+                variants: [{
+                    begin: `(\\b([0-9](_*[0-9])*)((${e})|\\.)?|(${e}))[eE][+-]?([0-9](_*[0-9])*)[fFdD]?\\b`
+                }, {
+                    begin: `\\b([0-9](_*[0-9])*)((${e})[fFdD]?\\b|\\.([fFdD]\\b)?)`
+                }, {
+                    begin: `(${e})[fFdD]?\\b`
+                }, {
+                    begin: "\\b([0-9](_*[0-9])*)[fFdD]\\b"
+                }, {
+                    begin: `\\b0[xX]((${a})\\.?|(${a})?\\.(${a}))[pP][+-]?([0-9](_*[0-9])*)[fFdD]?\\b`
+                }, {
+                    begin: "\\b(0|[1-9](_*[0-9])*)[lL]?\\b"
+                }, {
+                    begin: `\\b0[xX](${a})[lL]?\\b`
+                }, {
+                    begin: "\\b0(_*[0-7])*[lL]?\\b"
+                }, {
+                    begin: "\\b0[bB][01](_*[01])*[lL]?\\b"
+                }],
+                relevance: 0
+            };
+
+        function s(e, a, n) {
+            return -1 === n ? "" : e.replace(a, (t => s(e, a, n - 1)))
+        }
+        return e => {
+            const a = e.regex,
+                t = "[\xc0-\u02b8a-zA-Z_$][\xc0-\u02b8a-zA-Z_$0-9]*",
+                i = t + s("(?:<" + t + "~~~(?:\\s*,\\s*" + t + "~~~)*>)?", /~~~/g, 2),
+                r = {
+                    keyword: ["table", "column", "source", "dialect", "driver", "url", "property ", "query", "result", "source", "statement", "parameter", "type", "integer", "final", "void", "enum", "else", "break", "transient", "catch", "instanceof", "volatile", "case", "assert", "package", "default", "public", "try", "switch", "continue", "throws", "protected", "public", "private", "module", "requires", "exports", "do", "sealed", "yield", "permits"],
+                    literal: ["false", "true", "null"],
+                    type: ["char", "boolean", "long", "float", "int", "byte", "short", "double"],
+                    built_in: ["super", "this"]
+                },
+                l = {
+                    className: "meta",
+                    begin: "@" + t,
+                    contains: [{
+                        begin: /\(/,
+                        end: /\)/,
+                        contains: ["self"]
+                    }]
+                },
+                c = {
+                    className: "params",
+                    begin: /\(/,
+                    end: /\)/,
+                    keywords: r,
+                    relevance: 0,
+                    contains: [e.C_BLOCK_COMMENT_MODE],
+                    endsParent: !0
+                };
+            return {
+                name: "Java",
+                aliases: ["jsp"],
+                keywords: r,
+                illegal: /<\/|#/,
+                contains: [e.COMMENT("/\\*\\*", "\\*/", {
+                    relevance: 0,
+                    contains: [{
+                        begin: /\w+@/,
+                        relevance: 0
+                    }, {
+                        className: "doctag",
+                        begin: "@[A-Za-z]+"
+                    }]
+                }), {
+                    begin: /import java\.[a-z]+\./,
+                    keywords: "import",
+                    relevance: 2
+                }, e.C_LINE_COMMENT_MODE, e.C_BLOCK_COMMENT_MODE, {
+                    begin: /"""/,
+                    end: /"""/,
+                    className: "string",
+                    contains: [e.BACKSLASH_ESCAPE]
+                }, e.APOS_STRING_MODE, e.QUOTE_STRING_MODE, {
+                    match: [/\b(?:class|interface|enum|extends|implements|new)/, /\s+/, t],
+                    className: {
+                        1: "keyword",
+                        3: "title.class"
+                    }
+                }, {
+                    match: /non-sealed/,
+                    scope: "keyword"
+                }, {
+                    begin: [a.concat(/(?!else)/, t), /\s+/, t, /\s+/, /=(?!=)/],
+                    className: {
+                        1: "type",
+                        3: "variable",
+                        5: "operator"
+                    }
+                }, {
+                    begin: [/record/, /\s+/, t],
+                    className: {
+                        1: "keyword",
+                        3: "title.class"
+                    },
+                    contains: [c, e.C_LINE_COMMENT_MODE, e.C_BLOCK_COMMENT_MODE]
+                }, {
+                    beginKeywords: "new throw return else",
+                    relevance: 0
+                }, {
+                    begin: ["(?:" + i + "\\s+)", e.UNDERSCORE_IDENT_RE, /\s*(?=\()/],
+                    className: {
+                        2: "title.function"
+                    },
+                    keywords: r,
+                    contains: [{
+                        className: "params",
+                        begin: /\(/,
+                        end: /\)/,
+                        keywords: r,
+                        relevance: 0,
+                        contains: [l, e.APOS_STRING_MODE, e.QUOTE_STRING_MODE, n, e.C_BLOCK_COMMENT_MODE]
+                    }, e.C_LINE_COMMENT_MODE, e.C_BLOCK_COMMENT_MODE]
+                }, n, l]
+            }
+        }
+    })();
+    hljs.registerLanguage("java", e)
+})();    
+    </script>  
+    
     <script>hljs.highlightAll()</script>        
 </body>
 
