--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -13,8 +13,15 @@
 
     <style>
         .orange {
-            color: orange;
+            color: orange
         }
+
+        pre.csv {
+            background-color: #0d1117; 
+            color: #c9d1d9; 
+            padding: 14px
+        }
+
     </style>
 </head>
 
@@ -84,7 +91,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.7.0/build/styles/github-dark.min.css">
     <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.7.0/build/highlight.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.7.0/build/languages/bash.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.7.0/build/languages/json.min.js"></script>    
+    <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.7.0/build/languages/csv.min.js"></script>    
     <script src="js/marim.js"></script>
     <script>hljs.highlightAll()</script>        
 </body>
