--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -16,7 +16,7 @@
             color: orange
         }
 
-        pre.csv {
+        pre.terminal {
             background-color: #0d1117; 
             color: #c9d1d9; 
             padding: 14px
