--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -13,7 +13,13 @@
 
     <style>
         .orange {
-            color: orange
+            color: orange;
+            color: orangered;
+            color: #21ccffff;
+            color: #aaeeffff;
+            color: #ffff00ff;
+            color: #ff00ffff;
+            color: #21ccffff;
         }
 
         pre.terminal {
@@ -54,6 +60,16 @@
             </div>
         </nav>
     </div>
+
+    <section>
+        <div class="container">
+            <div class="row m-5">
+                <div class="col text-center">
+                    <img src="img/logo.png">
+                </div>
+            </div>
+        </div>
+    </section>
 
     <section>
         <div class="container">
