--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -35,7 +35,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">
-                    <img src="img/logo-small.png">
+                    <img src="img/logo-shadow-small.png">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -66,7 +66,7 @@
         <div class="container">
             <div class="row m-5">
                 <div class="col text-center">
-                    <img src="img/logo.png">
+                    <img src="img/logo-shadow.png">
                 </div>
             </div>
         </div>
