--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -6,7 +6,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- https://stackoverflow.com/questions/19778620/provide-an-image-for-whatsapp-link-sharing -->
     <title>Marim | {{ page.title }}</title>
+    <meta name="description" content="Marim Data Services Platform">
+    <meta property="og:title" content="Marim | {{ page.title }}">
+    <meta property="og:url" content="https://www.marimplatform.dev">
+    <meta property="og:description" content="Marim Data Services Platform {{ page.title }}">
+    <meta property="og:image" content="https://www.marimplatform.dev/img/logo-shadow-padding.png">
+    <meta property="og:type" content="website">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -26,7 +33,6 @@
             color: #c9d1d9; 
             padding: 14px
         }
-
     </style>
 </head>
 
