--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Marim | {{ page.title }}">
     <meta property="og:url" content="https://www.marimplatform.dev">
     <meta property="og:description" content="Marim Data Services Platform {{ page.title }}">
-    <meta property="og:image" content="https://www.marimplatform.dev/img/logo-shadow-padding.png">
+    <meta property="og:image" content="https://www.marimplatform.dev/img/logo.png">
     <meta property="og:type" content="website">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -41,7 +41,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">
-                    <img src="img/logo-shadow-small.png">
+                    <img src="img/logo-small.png">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -72,7 +72,7 @@
         <div class="container">
             <div class="row m-5">
                 <div class="col text-center">
-                    <img src="img/logo-shadow.png">
+                    <img src="img/logo.png">
                 </div>
             </div>
         </div>
